data/derived/comb/progs/unify/prog0234.ml.out
Characters 80-105:
  | h::t -> match [(mulByDigit i (List.rev t) * 10 ) + h*i] with
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
